// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Fields/Input Default smoke-test 1`] = `
<input class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-96"
       placeholder="Email"
       type="email"
>
`;

exports[`Design System/Fields/Input Disabled smoke-test 1`] = `
<input class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-96"
       placeholder="Email"
       disabled
       type="email"
>
`;

exports[`Design System/Fields/Input WithButton smoke-test 1`] = `
<div class="flex items-center space-x-2">
  <input class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-96"
         placeholder="Email"
         type="email"
  >
  <button class="rounded bg-primary px-4 py-2 text-primary-foreground"
          type="submit"
  >
    Subscribe
  </button>
</div>
`;

exports[`Design System/Fields/Input WithHelperText smoke-test 1`] = `
<div class="grid items-center gap-1.5">
  <label for="email-2">
    Email
  </label>
  <input class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-96"
         placeholder="Email"
         id="email-2"
         type="email"
  >
  <p class="text-muted-foreground text-sm">
    Enter your email address.
  </p>
</div>
`;

exports[`Design System/Fields/Input WithLabel smoke-test 1`] = `
<div class="grid items-center gap-1.5">
  <label for="email">
    Email
  </label>
  <input class="flex h-10 rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:font-medium file:text-foreground file:text-sm placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm w-96"
         placeholder="Email"
         id="email"
         type="email"
  >
</div>
`;
